add property and system blocks

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -6,11 +6,13 @@
 .base-title {
   font-size: 42px;
   line-height: 61px;
+  font-weight: 400;
 }
 
 .base-title-h1 {
   font-size: 64px;
   line-height: 72px;
+  font-weight: 500;
 }
 
 
