--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -21,3 +21,50 @@
   line-height: 26px;
   opacity: 0.7;
 }
+
+.base-list-item {
+  font-size: 18px;
+  line-height: 28px;
+  color: #333333;
+  position: relative;
+  padding-left: 16px;
+
+  &:not(:last-child) {
+    margin-bottom: 22px;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    background: #00b4db;
+    top: 11px;
+    left: 0;
+    transform: rotate(45deg);
+  }
+}
+
+#reviews-carousel {
+  .flickity-page-dots {
+    bottom: -50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .flickity-page-dots .dot {
+    width: 10px;
+    height: 10px;
+    opacity: 0.4;
+    background: #000000;
+    border: 4px solid transparent;
+    transition: all 0.2s;
+  }
+
+  .flickity-page-dots .dot.is-selected {
+    opacity: 1;
+    width: 12px;
+    height: 12px;
+  }
+}
