--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
 
 body {
   color: #242424;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Jost', sans-serif;
   background-color: #FAFCFF;
 }
 
