--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,3 +47,22 @@ ul {
 
 }
 
+.account-header {
+  display: flex;
+  align-items: center;
+  min-height: 50px;
+  margin-bottom: 35px;
+}
+
+.account-header__title {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 40px;
+  color: #576280;
+  margin: 0;
+}
+
+.account-header__notice {
+   margin-left: auto;
+   max-width: 668px;
+}
