--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,6 +60,8 @@ ul {
   line-height: 40px;
   color: #576280;
   margin: 0;
+  display: inline-block;
+  padding-right: 10px;
 }
 
 .account-header__notice {
