--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -7,12 +7,22 @@
   font-size: 42px;
   line-height: 61px;
   font-weight: 400;
+
+  @media(max-width: 1000px) {
+    font-size: 36px;
+    line-height: 48px;
+  }
 }
 
 .base-title-h1 {
   font-size: 64px;
   line-height: 72px;
   font-weight: 500;
+
+  @media(max-width: 1000px) {
+    font-size: 48px;
+    line-height: 56px;
+  }
 }
 
 
