--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,3 +68,24 @@ ul {
    margin-left: auto;
    max-width: 668px;
 }
+
+.form-title {
+  text-align: center;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 72px;
+  color: #00B4DB;
+  margin: 0;
+}
+
+.form-subtitle {
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  color: #576280;
+  margin: 0 0 30px;
+}
+
+.form-subtitle a {
+  color: #00B4DB;
+}
